# fullstack-jr-2025-2

./: DEPLOY_FRONTEND.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  DEPLOY_STATUS.md  Dockerfile  RAILWAY_DEPLOY.md  RAILWAY_ENV.md  TROUBLESHOOTING.md  alembic.ini  app-no-db.py  init.sql  pyproject.toml  railway.toml  start-debug.sh  start-fallback.sh  start-fixed-migrations.sh  start-no-db.sh  start-no-migrations.sh  start-simple.sh  start-test.sh  start-with-db-test.sh  start-with-migrations.sh  start.sh  test-app.py  test-db-connection.sh
backend/migrations/: env.py
backend/migrations/versions/: 14a49fa88630_add_uuid_generation_to_id_columns.py  65206481155b_initial_migration.py  68e46c250333_make_due_date_optional.py  ebe6098b0863_add_uuid_generation.py
backend/src/backend/: app.py  auth.py  database.py  models.py  routes.py  schemas.py  settings.py
backend/tests/: test_app.py
frontend/: Dockerfile  README.md  env.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/app/users/: page.tsx
frontend/src/components/: Pagination.tsx  ProtectedRoute.tsx
frontend/src/config/: env.example.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useApi.ts  useAuth.ts  useTasks.ts  useUsers.ts
frontend/src/lib/: api.ts  env.ts  validations.ts  zod-utils.ts
